package org.codefactory.team07.personalfinancialmanagement.domain.model;

public enum ExpenseCategory {
    ALIMENTACION, TRANSPORTE, VIVIENDA, ENTRETENIMIENTO, SALUD, EDUCACION
}
