package org.codefactory.team07.personalfinancialmanagement.domain.model;

public enum TransactionType {
    GASTO, INGRESO
}
