package org.codefactory.team07.personalfinancialmanagement.infrastructure.adapter.out.persistance;

import jakarta.persistence.*;
import lombok.*;
import java.time.LocalDateTime;

@Entity
@Table(name = "users")
@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
public class UserEntity {
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @Column(nullable = false, unique = true)
    private String email;

    @Column(nullable = false)
    private String password;

    // CRÍTICO: Debe coincidir con el nombre en tu script SQL
    @Column(name = "full_name", nullable = false) 
    private String name;

    // CRÍTICO: Debe coincidir con created_at en tu script SQL
    @Column(name = "created_at", nullable = false, updatable = false)
    private LocalDateTime createdAt;

    @PrePersist
    protected void onCreate() {
        if (this.createdAt == null) {
            this.createdAt = LocalDateTime.now();
        }
    }
}